# nanograph

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  NEXT_STEPS.md  PROJECT_STATUS.md  README.md
.beads/: metadata.json
nanograph-art/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
nanograph-art/benches/: README.md  art_benchmarks.rs  persistence_benchmarks.rs
nanograph-art/examples/: art_basic_usage.rs  art_kvstore_usage.rs  art_persistence_usage.rs  art_transaction_usage.rs
nanograph-art/src/: config.rs  error.rs  iterator.rs  kvstore.rs  lib.rs  metrics.rs  mvcc.rs  node.rs  persistence.rs  transaction.rs  tree.rs  wal_record.rs
nanograph-art/tests/: README.md  art_tests.rs  common_test_suite.rs  integration_tests.rs  test_utils.rs
nanograph-btree/: COMPLETION_STATUS.md  Cargo.toml  MVCC_DESIGN.md  README.md
nanograph-btree/benches/: README.md  btree_benchmarks.rs  persistence_benchmarks.rs
nanograph-btree/examples/: btree_basic_usage.rs  btree_kvstore_usage.rs  btree_persistence_usage.rs  btree_transaction_usage.rs
nanograph-btree/src/: config.rs  error.rs  iterator.rs  kvstore.rs  lib.rs  metrics.rs  mvcc.rs  mvcc_node.rs  mvcc_transaction.rs  mvcc_tree.rs  node.rs  persistence.rs  transaction.rs  tree.rs  wal_record.rs
nanograph-btree/tests/: README.md  common_test_suite.rs  integration_tests.rs  rebalancing_tests.rs  test_utils.rs  unit_tests.rs
nanograph-core/: Cargo.toml  OBJECT_ID_ALLOCATION.md
nanograph-core/src/: config.rs  lib.rs  metadata.rs  object.rs  types.rs
nanograph-core/src/config/: network.rs  storage.rs
nanograph-core/src/object/: cluster.rs  container.rs  database.rs  function.rs  index.rs  namespace.rs  node.rs  region.rs  security.rs  server.rs  shard.rs  table.rs  tablespace.rs  tenant.rs
nanograph-idx/: Cargo.toml  IMPLEMENTATION_PLAN.md  INDEX_TRAITS_SUMMARY.md  INDEX_TRAIT_DESIGN.md  ORDERED_INDEXES.md  README.md  SHARD_COLLISION_ISSUE.md  TRAIT_IMPLEMENTATION_PLAN.md
nanograph-idx/benches/: index_benchmarks.rs
nanograph-idx/src/: distributed.rs  error.rs  index.rs  lib.rs  persistence.rs  raft_adapter.rs  serialization.rs
nanograph-idx/src/index/: ordered.rs  spatial.rs  store.rs  text.rs  vector.rs
nanograph-idx/tests/: distributed_fulltext_tests.rs  fulltext_index_tests.rs  ordered_index_tests.rs
nanograph-kvm/: Cargo.toml  IMPLEMENTATION_NOTES.md  INDEX_TODO.md  README.md  TABLESPACE_TODO.md
nanograph-kvm/benches/: manager_bench.rs
nanograph-kvm/src/: allocator.rs  bin.rs  cache.rs  config.rs  container.rs  context.rs  database.rs  handle.rs  lib.rs  manager.rs  metacache.rs  shardmgr.rs  table.rs  tablespace.rs  utility.rs
nanograph-kvm/tests/: common.rs  manager_tests.rs  tablespace_tests.rs
nanograph-kvt/: Cargo.toml  DATABASE_MANAGER_API.md  IDENTITY_MANAGEMENT.md  README.md  TEST_SUITE_README.md  TYPE_UNIFICATION.md
nanograph-kvt/benches/: README.md  common.rs  comparative_benchmarks.rs  kvstore_benchmarks.rs
nanograph-kvt/src/: config.rs  database.rs  error.rs  kviter.rs  kvstore.rs  lib.rs  manager.rs  memory.rs  metacache.rs  metadata.rs  metrics.rs  resolver.rs  result.rs  tablespace.rs  test_suite.rs  transaction.rs  types.rs
nanograph-lmdb/: Cargo.toml  README.md
nanograph-lmdb/benches/: lmdb_benchmarks.rs
nanograph-lmdb/src/: config.rs  error.rs  iterator.rs  kvstore.rs  lib.rs  transaction.rs
nanograph-lmdb/tests/: basic_tests.rs  common_test_suite.rs  integration_tests.rs  isolation_test.rs
nanograph-lsm/: ARCHITECTURE.md  Cargo.toml  NEXT_STEPS.md  README.md
nanograph-lsm/benches/: README.md  lsm_benchmarks.rs  persistence_benchmarks.rs
nanograph-lsm/examples/: lsm_basic_usage.rs  lsm_kvstore_usage.rs  lsm_persistence_usage.rs  lsm_transaction_usage.rs
nanograph-lsm/src/: bloblog.rs  cache.rs  compaction.rs  config.rs  engine.rs  error.rs  iterator.rs  kvstore.rs  lib.rs  memtable.rs  metrics.rs  options.rs  sstable.rs  transaction.rs  wal_record.rs
nanograph-lsm/tests/: README.md  cache_tests.rs  common_test_suite.rs  integration_tests.rs  kvstore_tests.rs  metrics_tests.rs  sstable_iterator_tests.rs
nanograph-raft/: ARCHITECTURE_INTEGRATION.md  CACHE_CONSISTENCY_IMPLEMENTATION.md  CONSENSUS_IMPLEMENTATION_PLAN.md  Cargo.toml  IMPLEMENTATION_STATUS.md  INTEGRATION_GUIDE.md  LOGICAL_ARCHITECTURE.md  README.md  THREE_TIER_ARCHITECTURE.md  build.rs
nanograph-raft/benches/: consensus_benchmarks.rs
nanograph-raft/proto/: raft.proto
nanograph-raft/src/: config.rs  error.rs  group.rs  grpc.rs  lib.rs  manager.rs  metadata.rs  network.rs  router.rs  shard.rs  shard_group.rs  storage.rs  types (Hans-Desktop's conflicted copy 2026-01-14).rs  types.rs
nanograph-raft/tests/: README.md  integration_tests.rs  manager_unit_tests.rs  multi_node_integration_tests.rs  network_unit_tests.rs  runtime_integration_tests.rs
nanograph-util/: Cargo.toml  README.md
nanograph-util/benches/: README.md  util_benchmarks.rs
nanograph-util/src/: cache.rs  compression.rs  encryption.rs  error.rs  integrity.rs  lib.rs  serde.rs
nanograph-util/tests/: README.md  cache_map_tests.rs  unit_tests.rs
nanograph-vfs/: Cargo.toml  README.md
nanograph-vfs/benches/: filesystem_benchmarks.rs
nanograph-vfs/examples/: local_fs_usage.rs  manager_usage.rs  memory_fs_usage.rs  monitored_fs_usage.rs  mounting_fs_usage.rs  overlay_fs_usage.rs  vfs_basic_usage.rs
nanograph-vfs/src/: filesystem.rs  lib.rs  localfs.rs  manager.rs  memoryfs.rs  metrics.rs  monitoredfs.rs  mountingfs.rs  overlayfs.rs  result.rs  test_suite.rs  virtualfs.rs
nanograph-vfs/tests/: integration_tests.rs
nanograph-wal/: COMPRESSION_ENCRYPTION_IMPLEMENTATION_PLAN.md  Cargo.toml  WAL_V4_VERIFICATION_REPORT.md
nanograph-wal/benches/: README.md  wal_benchmarks.rs
nanograph-wal/examples/: wal_advanced_usage.rs  wal_basic_usage.rs  wal_durability_usage.rs  wal_recovery_usage.rs
nanograph-wal/src/: config.rs  lib.rs  lsn.rs  manager.rs  metrics.rs  reader.rs  result.rs  walfile.rs  writer.rs
nanograph-wal/tests/: integration_tests.rs  read_write.rs  torn_write_recovery_tests.rs
(+113 files in other folders)
