[workspace]
resolver = "3"
members = [
    "nanograph-art",
    "nanograph-auth",
    "nanograph-btree",
    "nanograph-core",
    "nanograph-fmt",
    "nanograph-idx",
    "nanograph-kvm",
    "nanograph-kvt",
    "nanograph-lmdb",
    "nanograph-lsm",
    "nanograph-raft",
    "nanograph-util",
    "nanograph-vfs",
    "nanograph-wal",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
keywords = ["graph", "vector"]
readme = "README.md"
license = "APACHE2 or MIT"
description = "An Embeddedable AI Database"
authors = ["Hans W. Uhlig <huhlig@gmail.com>"]
documentation = "https://huhlig.github.io/nanograph"
homepage = "https://huhlig.github.io/nanograph"
repository = "https://github.com/huhlig/nanograph"
categories = ["database"]


[workspace.dependencies]
# Internal Crates
nanograph-art = { path = "nanograph-art" }
nanograph-auth = { path = "nanograph-auth" }
nanograph-btree = { path = "nanograph-btree" }
nanograph-core = { path = "nanograph-core" }
nanograph-kvt = { path = "nanograph-kvt" }
nanograph-lmdb = { path = "nanograph-lmdb" }
nanograph-lsm = { path = "nanograph-lsm" }
nanograph-raft = { path = "nanograph-raft" }
nanograph-util = { path = "nanograph-util" }
nanograph-vfs = { path = "nanograph-vfs" }
nanograph-wal = { path = "nanograph-wal" }

# Async, Consensus, and Networking
async-trait = { version = "0.1" }
futures = { version = "0.3" }
futures-core = { version = "0.3", features = ["default"] }
futures-util = { version = "0.3", features = ["default"] }
# (TODO: Fix this on release of openraft v0.10 https://github.com/databendlabs/openraft/issues/1637)
openraft = { git = "https://github.com/databendlabs/openraft.git", branch = "release-0.10", features = ["serde", "tracing-log"] }
openraft-multi = { git = "https://github.com/databendlabs/openraft.git", branch = "release-0.10" }
tokio = { version = "1", features = ["full"] }
tokio-test = { version = "0.4" }
tokio-util = { version = "0.7", features = ["default"] }
tokio-stream = { version = "0.1" }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Integrity
crc = { version = "3" }
rand = { version = "0.9", features = ["small_rng"] }
xxhash-rust = { version = "0.8", features = ["xxh32"] }

# Compression & Encryption
aes-gcm = { version = "0.10" }
chacha20poly1305 = { version = "0.10" }
lz4 = { version = "1.28" }
zstd = { version = "0.13" }
snap = { version = "1.1" }

# Error handling
thiserror = { version = "2", features = ["default"] }

# Date/Time Handling
atomic-time = { version = "0.1", features = ["default"] }
chrono = { version = "0.4", features = ["default", "now"] }

# Logging
metrics = { version = "0.24" }
tracing = { version = "0.1", features = ["default"] }
tracing-timing = { version = "0.7", features = ["default"] }
tracing-subscriber = { version = "0.3", features = ["default"] }

# Serialization
byteorder = { version = "1.5", features = ["default"] }
capnp = { version = "0.25", features = ["default"] }
capnp-rpc = { version = "0.25" }
capnpc = { version = "0.25" }
postcard = { version = "1", features = ["use-crc", "use-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["default"] }
serde_yml = { version = "0.0.12", features = ["default"] }

# gRPC
tonic = { version = "0.14", features = ["default"] }
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14", features = ["default"] }
prost = { version = "0.14" }

# Testing & Benchmarking
criterion = { version = "0.8", features = ["html_reports", "csv_output", "plotters", "async_tokio"] }
tracing-test = { version = "0.2" }
tempfile = { version = "3.24" }

# Web Framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }


