[package]
name = "nanograph-art"
description = "Adaptive Radix Tree implementation for Nanograph"
categories = ["algorithms", "database-implementations", "data-structures"]
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Internal Dependencies
nanograph-kvt.workspace = true
nanograph-vfs.workspace = true
nanograph-wal.workspace = true
nanograph-util.workspace = true

# Random number generation
rand.workspace = true

# Error Handling
thiserror.workspace = true

# Async
async-trait.workspace = true
futures-core.workspace = true
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
futures = "0.3"

[[bench]]
name = "art_benchmarks"
harness = false

[[bench]]
name = "persistence_benchmarks"
harness = false
