[package]
name = "nanograph-art"
description = "Adaptive Radix Tree implementation for Nanograph"
categories = ["algorithms", "database-implementations", "data-structures"]
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Internal Dependencies
nanograph-kvt.workspace = true
nanograph-vfs.workspace = true
nanograph-wal.workspace = true
nanograph-util.workspace = true

# Random number generation
rand.workspace = true

# Error Handling
thiserror.workspace = true

# Async
async-trait.workspace = true
futures-core.workspace = true
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
tokio-test.workspace = true
criterion.workspace = true
futures.workspace = true

[[bench]]
name = "art_benchmarks"
harness = false

[[bench]]
name = "persistence_benchmarks"
harness = false
