[package]
name = "nanograph-core"
description = "Core Types for Nanograph"
categories = []
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Time/Date Handling
chrono.workspace = true
serde.workspace = true
