[package]
name = "nanograph-idx"
description = "Index Implementations for Nanograph Database"
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[features]
default = []
raft = ["nanograph-raft"]

[dependencies]
# Internal Crates
nanograph-core.workspace = true
nanograph-kvt.workspace = true
nanograph-btree.workspace = true
nanograph-vfs.workspace = true
nanograph-util.workspace = true
nanograph-wal.workspace = true
nanograph-raft = { workspace = true, optional = true }

# Async Runtime
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
futures = "0.3"
futures-core = "0.3"

# Serialization
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
bincode = "1.3"

# Error Handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Caching
lru = "0.12"

# Atomic operations
parking_lot = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-test.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "index_benchmarks"
harness = false
