[package]
name = "nanograph-kvm"
description = "Key Value Database Management for Nanograph"
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
# Internal Crates
nanograph-core.workspace = true
nanograph-kvt.workspace = true
nanograph-raft.workspace = true

# Time/Date Crates
chrono.workspace = true