[package]
name = "nanograph-kvm"
description = "Key Value Database Management for Nanograph"
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
# Internal Crates
nanograph-auth.workspace = true
nanograph-core.workspace = true
nanograph-kvt.workspace = true
nanograph-raft.workspace = true
nanograph-vfs.workspace = true
nanograph-lsm.workspace = true
nanograph-btree.workspace = true
nanograph-art.workspace = true
nanograph-util.workspace = true

# Integrity
crc.workspace = true

# Time/Date Crates
chrono.workspace = true

# Serialization
serde.workspace = true
postcard.workspace = true

# Async Await
futures.workspace = true

# Logging and Metrics
metrics.workspace = true
tracing.workspace = true
tracing-timing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-test.workspace = true
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "manager_bench"
harness = false