[package]
name = "nanograph-kvt"
description = "Common Code for Key Value Storage in Nanograph"
categories = ["algorithms", "database-implementations", "data-structures"]
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Integrity
nanograph-core.workspace = true
nanograph-vfs.workspace = true
nanograph-wal.workspace = true
rand.workspace = true

# Async
async-trait.workspace = true
futures-core.workspace = true

# Serialization
serde.workspace = true

# Logging & Metrics
thiserror.workspace = true
metrics.workspace = true
tracing.workspace = true
tracing-timing.workspace = true


[dev-dependencies]
criterion.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }

