[package]
name = "nanograph-kvt"
description = "Common Code for Key Value Storage in Nanograph"
categories = ["algorithms", "database-implementations", "data-structures"]
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Integrity
nanograph-core.workspace = true
nanograph-vfs.workspace = true
nanograph-wal.workspace = true
rand.workspace = true

# Async
async-trait.workspace = true
futures-core.workspace = true

# Serialization
serde.workspace = true

# Logging & Metrics
thiserror.workspace = true
metrics.workspace = true
tracing.workspace = true
tracing-timing.workspace = true


[features]
# Feature to enable test utilities for external crates
test-utils = ["dep:futures", "dep:tokio"]
# Feature to enable benchmark utilities for external crates
bench-utils = ["dep:criterion", "dep:futures", "dep:tokio"]

[dependencies.futures]
workspace = true
optional = true

[dependencies.tokio]
workspace = true
features = ["full"]
optional = true

[dependencies.criterion]
workspace = true
optional = true

[dev-dependencies]
criterion.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
# Storage engine implementations for comparative benchmarks
nanograph-lmdb = { path = "../nanograph-lmdb" }
nanograph-lsm = { path = "../nanograph-lsm" }
nanograph-btree = { path = "../nanograph-btree" }
nanograph-art = { path = "../nanograph-art" }

