[package]
name = "nanograph-raft"
description = "Raft Based Consensus Model for Nanograph"
categories = ["concurrency", "network-programming"]
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Internal Crates
nanograph-core = { workspace = true }
nanograph-kvt = { workspace = true }
nanograph-util = { workspace = true }
nanograph-wal = { workspace = true }
nanograph-vfs = { workspace = true }

# Async
async-trait = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["default", "compat"] }
tokio-stream = { workspace = true }

# Consensus
openraft = { workspace = true }
openraft-multi = { workspace = true }

# Utilities
# uuid = {workspace = true}

# Serialization
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

# Logging
metrics.workspace = true
tracing.workspace = true
tracing-timing.workspace = true


[dev-dependencies]
nanograph-vfs.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }

[build-dependencies]
tonic-prost-build.workspace = true

[[bench]]
name = "consensus_benchmarks"
harness = false