[package]
name = "nanograph-util"
description = "Compression, encryption, and integrity utilities for Nanograph"
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
# Integrity/Checksums
crc32c.workspace = true
xxhash-rust.workspace = true

# Compression
lz4 = "1.28"
zstd = "0.13"
snap = "1.1"

# Encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"

# Error handling
thiserror = "2.0"

[dev-dependencies]
criterion.workspace = true