[package]
name = "nanograph-util"
description = "Compression, encryption, and integrity utilities for Nanograph"
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
# Integrity/Checksums
crc.workspace = true
xxhash-rust.workspace = true

# Compression
lz4.workspace = true
snap.workspace = true
zstd.workspace = true

# Encryption
aes-gcm.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true