[package]
name = "nanograph-vfs"
description = "Virtual File System used to abstract file system operations for Nanograph."
categories = ["caching", "filesystem"]
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
metrics.workspace = true
tracing.workspace = true
tracing-timing.workspace = true

[dev-dependencies]
criterion.workspace = true
tracing-test.workspace = true
